--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,10 @@ body.dark {
   margin-bottom: 0.5rem;
 }
 
+.navbar-buttons .cv-btn {
+  width:max-content;
+}
+
 .dropdown-menu {
   max-height: 150px;
   overflow:auto;
